Fix alignment of image

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(norsefire.jpg) no-repeat top left fixed;
+  background: url(norsefire.jpg) no-repeat bottom right fixed;
   background-size: cover;
   background-color: black;
   color: white;
